# holochain-rust-todo

./: .gitignore  README.md
test/: index.js  package-lock.json
zomes/lists/: zome.json
zomes/lists/code/: .hcbuild  Cargo.toml
zomes/lists/code/src/: lib.rs
zomes/users/code/: .build  Cargo.toml
zomes/users/code/src/: lib.rs
